<resources>

    <string name="app_name">简学</string>
    <string name="home">首页</string>
    <string name="system">知识体系</string>
    <string name="mine">我的</string>
    <string name="exit">再按一次退出</string>

    <string name="hello_blank_fragment">ahhaha</string>
    <string name="collection">我的收藏</string>
    <string name="bookmark">我的书签</string>
    <string name="setting">设置</string>
    <string name="tip_login">点击头像登录</string>
    <string name="hot">hot</string>
    <string name="search">search</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="confirm">confirm</string>
    <string name="signin">sign in</string>
    <string name="signup">sign up</string>
    <string name="signout">sign out</string>
    <string name="forgetpsw">forget password?</string>
    <string name="toSignup">----- Don\'t have an account ? -----</string>

    <string name="my_collection">我的收藏</string>
    <string name="about_jianxue">关于简学</string>
    <string name="check_update">检查更新</string>
    <string name="wifi">开启后WIFI自动下载更新应用</string>
    <string name="auto_update">自动更新</string>
    <string name="ssystem_setting">系统设置</string>
    <string name="channel_name">joker</string>
    <string name="channel_description">description</string>
    <string name="receiver_push_message">打开消息推送</string>
    <string name="message_no_disturb">消息免打扰</string>
    <string name="time_choose">Choose Time</string>
    <string name="OK">OK</string>

</resources>
