<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.python.wanandroid.ui.signup.SignUpActivity">

    <View
        android:id="@+id/activity_sign_up_v"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_150"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="@dimen/dp_75"
            android:layout_height="@dimen/dp_75"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_home_black_24dp" />

    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_sign_up_til_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_40"
        android:hint="@string/username"
        android:theme="@style/TextInputEditTextTheme">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/activity_sign_up_tiet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:textSize="@dimen/sp_14" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_sign_up_til_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:hint="@string/password"
        android:theme="@style/TextInputEditTextTheme"
        app:passwordToggleDrawable="@drawable/selector_visibility"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/activity_sign_up_tiet_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:textSize="@dimen/sp_14" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_sign_up_til_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:hint="@string/confirm"
        android:theme="@style/TextInputEditTextTheme"
        app:passwordToggleDrawable="@drawable/selector_visibility"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/activity_sign_up_tiet_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:textSize="@dimen/sp_14" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/activity_sign_up_btn_signin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/selector_login"
        android:enabled="false"
        android:text="@string/signin"
        android:textAllCaps="false"
        android:textColor="@color/icons"
        android:textSize="@dimen/sp_14" />

</LinearLayout>
