<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/icons"
    android:orientation="vertical"
    tools:context="com.python.wanandroid.ui.signin.SignInActivity">

    <View
        android:id="@+id/activity_sign_in_v"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary" />

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_150"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="@dimen/dp_75"
            android:layout_height="@dimen/dp_75"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_home_black_24dp" />

    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_sign_in_til_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_40"
        android:hint="@string/username"
        android:textColorHint="@color/ccccccc"
        android:theme="@style/TextInputEditTextTheme">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/activity_sign_in_tiet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:inputType="text"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_14" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_sign_in_til_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:hint="@string/password"
        android:textColorHint="@color/ccccccc"
        android:theme="@style/TextInputEditTextTheme"
        app:errorEnabled="true"
        app:passwordToggleDrawable="@drawable/selector_visibility"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/activity_sign_in_tiet_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_14" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/activity_sign_in_btn_signin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/selector_login"
        android:enabled="false"
        android:text="@string/signin"
        android:textAllCaps="false"
        android:textColor="@color/icons"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/activity_sign_in_tv_forget_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/forgetpsw"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/sp_12" />

    <RelativeLayout
        android:id="@+id/activity_sign_in_tv_rl_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_45"
        android:gravity="center">

        <ImageView
            android:id="@+id/activity_sign_in_iv_qq"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:src="@drawable/ic_qq" />

        <ImageView
            android:id="@+id/activity_sign_in_iv_weixin"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_25"
            android:layout_marginStart="@dimen/dp_25"
            android:layout_toEndOf="@+id/activity_sign_in_iv_qq"
            android:layout_toRightOf="@+id/activity_sign_in_iv_qq"
            android:src="@drawable/ic_weixin" />

        <ImageView
            android:id="@+id/activity_sign_in_iv_weibo"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_25"
            android:layout_marginStart="@dimen/dp_25"
            android:layout_toEndOf="@+id/activity_sign_in_iv_weixin"
            android:layout_toRightOf="@+id/activity_sign_in_iv_weixin"
            android:src="@drawable/ic_weibo" />

        <TextView
            android:id="@+id/activity_sign_in_tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_sign_in_iv_qq"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/toSignup"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/sp_12" />

    </RelativeLayout>

</LinearLayout>
