<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.python.wanandroid.ui.mine.MineFragment">

    <View
        android:id="@+id/fragment_mine_v"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/fragment_mine_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_125"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="PxUsage">

        <ImageView
            android:id="@+id/fragment_mine_iv_pic"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/tip_login"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/fragment_mine_rl_my_collection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_8"
        android:paddingRight="@dimen/dp_8"
        android:paddingTop="@dimen/dp_10">

        <ImageView
            android:id="@+id/fragment_mine_iv_collection"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_grade_black_24dp" />

        <TextView
            android:id="@+id/fragment_mine_tv_collection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_toEndOf="@+id/fragment_mine_iv_collection"
            android:layout_toRightOf="@+id/fragment_mine_iv_collection"
            android:text="@string/collection"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_12" />

        <ImageView
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_5"
        android:background="@color/divider" />

    <RelativeLayout
        android:id="@+id/fragment_mine_rl_my_bookmark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_8"
        android:paddingRight="@dimen/dp_8"
        android:paddingTop="@dimen/dp_10">

        <ImageView
            android:id="@+id/fragment_mine_iv_bookmark"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_bookmark_black_24dp" />

        <TextView
            android:id="@+id/fragment_mine_tv_bookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_toEndOf="@+id/fragment_mine_iv_bookmark"
            android:layout_toRightOf="@+id/fragment_mine_iv_bookmark"
            android:text="@string/bookmark"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_12" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_5"
        android:background="@color/divider" />

    <RelativeLayout
        android:id="@+id/fragment_mine_rl_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_8"
        android:paddingRight="@dimen/dp_8"
        android:paddingTop="@dimen/dp_10">

        <ImageView
            android:id="@+id/fragment_mine_iv_setting"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_settings_black_24dp" />

        <TextView
            android:id="@+id/fragment_mine_tv_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_toEndOf="@+id/fragment_mine_iv_setting"
            android:layout_toRightOf="@+id/fragment_mine_iv_setting"
            android:text="@string/setting"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_12" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_5"
        android:background="@color/divider" />

</LinearLayout>
